# leomed_bench

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: cifar10_1gpu.yaml  cifar10_4gpu.yaml  imagenet_1gpu.yaml  imagenet_4gpu.yaml  smoke_1gpu.yaml  smoke_4gpu.yaml
scripts/: collect_results.py  plot_throughput_comparison.py  stage_imagenet_once.sh  submit_benchmarks.sh  submit_benchmarks_container.sh
slurm/: benchmark_1gpu.sbatch  benchmark_1gpu_container.sbatch  benchmark_4gpu.sbatch  benchmark_4gpu_container.sbatch
src/leomed_bench/: config.py  train.py
src/leomed_bench/callbacks/: throughput.py
src/leomed_bench/data/: imagenet.py
src/leomed_bench/models/: swin_module.py
